docker/awscli/template/stacks/00-vpc.yml
AWSTemplateFormatVersion: '2010-09-09'
Description:
  VPC & subnet create

# ------------------------------------------------------------#
# 入力パラメータ
# ------------------------------------------------------------#
Parameters:

  ProjectName:
    Description: Project Name
    Type: String
    Default: sample
  Environment:
    Description: Environment
    Type: String
    AllowedValues:
      - dev
      - stg
      - prod

Mappings:
  Env:
    dev:
      VPCCidr: 10.0.0.0/16
      PublicSubnet1A: 10.0.0.0/24
      PrivateSubnet1A: 10.0.1.0/24
      PublicSubnet1C: 10.0.2.0/24
      PrivateSubnet1C: 10.0.3.0/24
    stg:
      VPCCidr: 10.1.0.0/16
      PublicSubnet1A: 10.1.0.0/24
      PrivateSubnet1A: 10.1.1.0/24
      PublicSubnet1C: 10.1.2.0/24
      PrivateSubnet1C: 10.1.3.0/24
    prod:
      VPCCidr: 10.2.0.0/16
      PublicSubnet1A: 10.2.0.0/24
      PrivateSubnet1A: 10.2.1.0/24
      PublicSubnet1C: 10.2.2.0/24
      PrivateSubnet1C: 10.2.3.0/24

Resources:

  # VPCの作成
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [Env, !Ref Environment, VPCCidr ]
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Sub "${ProjectName}-${Environment}-vpc"

  # PublicなルートテーブルA
  PublicRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub "${ProjectName}-${Environment}-public-a"

  # PublicなルートテーブルC
  PublicRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Sub "${ProjectName}-${Environment}-public-c"

  # Publicなサブネット(1A)
  PublicSubnet1A:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true
      CidrBlock: !FindInMap [Env, !Ref Environment, PublicSubnet1A ]
      AvailabilityZone: "ap-northeast-1a"
      Tags:
      - Key: Name
        Value: !Sub "${ProjectName}-${Environment}-public-1a"
  PubSubnet1ARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTableA

  # Publicなサブネット(1C)
  PublicSubnet1C:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: true
      CidrBlock: !FindInMap [Env, !Ref Environment, PublicSubnet1C ]
      AvailabilityZone: "ap-northeast-1c"
      Tags:
      - Key: Name
        Value: !Sub "${ProjectName}-${Environment}-public-1c"
  PubSubnet1CRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1C
      RouteTableId: !Ref PublicRouteTableC

  # インターネットGW
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: Name
        Value: !Sub "${ProjectName}-${Environment}-igw"
  # インターネットGWをVPCにアタッチ
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  # インターネットGWのルーティング
  RouteA:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  # インターネットGWのルーティング
  RouteC:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTableC
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

# ------------------------------------------------------------#
# Outputパラメータ
# ------------------------------------------------------------#
Outputs:
  VPC:
    Description: The ID of the VPC
    Value: !Ref VPC
    Export:
      Name: !Join ["-", [Export, !Ref ProjectName, !Ref Environment, VPC]]

  PublicSubnet1A:
    Description: The ID of the VPC Subnet
    Value: !Ref PublicSubnet1A
    Export:
      Name: !Join ["-", [Export, !Ref ProjectName, !Ref Environment, PublicSubnet1A]]

  PublicSubnet1C:
    Description: The ID of the VPC Subnet
    Value: !Ref PublicSubnet1C
    Export:
      Name: !Join ["-", [Export, !Ref ProjectName, !Ref Environment, PublicSubnet1C]]
